Reduce Guava Immutable usage