@@ -19,7 +19,6 @@ package com.velocitypowered.proxy.network.netty;
 
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
-import com.google.common.collect.ImmutableList;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import io.netty.resolver.AddressResolver;
 import io.netty.resolver.AddressResolverGroup;
@@ -73,7 +72,7 @@ public final class SeparatePoolInetNameResolver extends InetNameResolver {
       resolveExecutor.execute(() -> {
         promise.addListener(future -> {
           if (future.isSuccess()) {
-            cache.put(inetHost, ImmutableList.of((InetAddress) future.getNow()));
+            cache.put(inetHost, List.of((InetAddress) future.getNow()));
           }
         });
         this.delegate.resolve(inetHost, promise);
