@@ -22,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.builder.RequiredArgumentBuilder;
 import com.velocitypowered.api.command.CommandSource;
@@ -216,7 +215,7 @@ public class RawCommandTests extends CommandTestSuite {
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
         assertEquals("", invocation.arguments());
-        return ImmutableList.of("world", "people"); // ensures we don't mutate the user's list
+        return List.of("world", "people"); // ensures we don't mutate the user's list
       }
     });
 
@@ -235,7 +234,7 @@ public class RawCommandTests extends CommandTestSuite {
       @Override
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -447,7 +446,7 @@ public class RawCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -473,7 +472,7 @@ public class RawCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
