@@ -23,7 +23,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import com.mojang.brigadier.builder.RequiredArgumentBuilder;
 import com.velocitypowered.api.command.CommandSource;
@@ -217,7 +216,7 @@ public class SimpleCommandTests extends CommandTestSuite {
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
         assertArrayEquals(new String[0], invocation.arguments());
-        return ImmutableList.of("world", "people"); // ensures we don't mutate the user's list
+        return List.of("world", "people"); // ensures we don't mutate the user's list
       }
     });
 
@@ -236,7 +235,7 @@ public class SimpleCommandTests extends CommandTestSuite {
       @Override
       public List<String> suggest(final Invocation invocation) {
         assertEquals("hello", invocation.alias());
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -448,7 +447,7 @@ public class SimpleCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
@@ -474,7 +473,7 @@ public class SimpleCommandTests extends CommandTestSuite {
 
       @Override
       public List<String> suggest(final Invocation invocation) {
-        return ImmutableList.of("world");
+        return List.of("world");
       }
     });
 
